# personaplex

./: Dockerfile.runpod  README.md  setup_runpod.sh  start_alternative.sh  start_both.sh  start_moshi.sh
alternative_server/: .env.local  .gitignore  README.md  pyproject.toml
alternative_server/client/: .env.local  index.html  package-lock.json  vite.config.ts
alternative_server/client/src/: audio-processor.ts  env.ts  vite-env.d.ts
alternative_server/client/src/pages/Conversation/: Conversation.tsx  MediaContext.ts  SocketContext.ts
alternative_server/client/src/pages/Conversation/components/AudioVisualizer/: ClientVisualizer.tsx
alternative_server/client/src/pages/Conversation/components/ModelParams/: ModelParams.tsx
alternative_server/client/src/pages/Conversation/components/UserAudio/: UserAudio.tsx
alternative_server/client/src/pages/Conversation/hooks/: useLocalStorage.ts  useModelParams.ts  useServerAudio.ts  useSystemTheme.ts  useUserAudio.ts
alternative_server/client/src/pages/Queue/: Queue.tsx
alternative_server/client/src/types/: opus-recorder.d.ts
alternative_server/src/alternative_server/: __init__.py  audio.py  llm.py  protocol.py  server.py  stt.py  tts.py
client/src/pages/Queue/: Queue.tsx
