[project]
name = "personaplex-alternative"
version = "0.1.0"
description = "Alternative voice stack for PersonaPlex using Whisper + Kokoro + Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "faster-whisper>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "sounddevice>=0.4.6",
    "pyogg==0.6.14a1",
    "nvidia-cublas-cu12==12.9.2.10",
    "kokoro==0.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
alternative-server = "alternative_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alternative_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
